[package]
name = "mergepen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
automerge = "0.6.1"
clap = { version = "4.5.42", features = ["derive"] }
futures = "0.3.31"
openat = "0.1"
samod-core = { path = "../samod/samod-core" }
samod = { path = "../samod/samod", features = ["tokio", "tungstenite"] }
serde = { version = "1", features = ["derive"] }
serde-automerge = { path = "../serde-automerge" }
#thiserror = "2"
tokio = { version = "1.47.1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
toml = "^0.9"
tracing-subscriber = "0.3.19"
